--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -9,17 +9,18 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="visible">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -30,13 +31,13 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/dp56"
-                        android:gravity="center_vertical">
+                        android:gravity="center">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/dp60"
                             android:text="Giỏ hàng"
+                            android:textAllCaps="true"
                             android:textColor="@color/black_two"
                             android:textSize="@dimen/sp18" />
                     </LinearLayout>
@@ -434,7 +435,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/dp20"
                         android:layout_marginBottom="@dimen/dp30"
-                        android:background="@drawable/button_add_to_cart"
+                        android:background="@drawable/background_button_checkout"
                         android:text="TIẾN HÀNH THANH TOÁN"
                         android:textAllCaps="true"
                         android:textColor="@color/white"
@@ -447,7 +448,7 @@
             <LinearLayout
                 android:id="@+id/linear_layout_empty_cart"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/dp20"
                 android:background="@color/white"
                 android:orientation="vertical"
@@ -470,7 +471,6 @@
                     android:textSize="@dimen/sp14" />
             </LinearLayout>
         </LinearLayout>
-
 
     </android.support.v4.widget.NestedScrollView>
 
